--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.1.4",
     "hardhat": "^2.2.1",
+    "hardhat-gas-reporter": "^1.0.4",
     "web3": "^1.3.5"
   },
   "dependencies": {
